No idea what I have just done…

--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,20 @@
         <module>chaturaji-ai</module>
     </modules>
 
+<dependencies>
+    
+        ...
+        
+        <!-- Apache HTTP Client -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcomponents-client</artifactId>
+            <version>4.3.2</version>
+        </dependency> 
+        
+        ...
+        
+    </dependencies>
+
 
 </project>
