--- a/chaturaji-android-app-integration-tests/pom.xml
+++ b/chaturaji-android-app-integration-tests/pom.xml
@@ -36,6 +36,8 @@
         </dependency>
     </dependencies>
 
+    <!--// $ANDROID_HOME/tools/emulator -avd chaturaji-->
+
     <build>
         <finalName>${project.artifactId}</finalName>
         <plugins>
@@ -74,4 +76,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
