improving project to simplify and work better on Eclipse but still not working on Eclipse

--- a/.gitignore
+++ b/.gitignore
@@ -35,10 +35,10 @@ Thumbs.db
 
 ## Eclipse Config Files
 .project
+.settings
 .classpath
-project.properties
-default.properties
 bin
+gen
 
 ## Maven Build Files
 target
