--- a/chaturaji-android-app/pom.xml
+++ b/chaturaji-android-app/pom.xml
@@ -5,20 +5,27 @@
 
     <parent>
         <groupId>org.chaturaji</groupId>
-        <artifactId>chaturaji-android-app-parent</artifactId>
+        <artifactId>chaturaji</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-
-    <artifactId>chaturaji-android-app</artifactId>
     <packaging>apk</packaging>
 
+    <artifactId>chaturaji-android-app</artifactId>
+
     <name>Chaturaji Android Application</name>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <platform.version>4.1.1.4</platform.version>
+        <android.plugin.version>3.5.3</android.plugin.version>
+    </properties>
 
     <dependencies>
         <!-- android -->
         <dependency>
             <groupId>com.google.android</groupId>
             <artifactId>android</artifactId>
+            <version>4.1.1.4</version>
             <scope>provided</scope>
         </dependency>
 
@@ -33,58 +40,25 @@
 
     <build>
         <finalName>${project.artifactId}</finalName>
-
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>com.jayway.maven.plugins.android.generation2</groupId>
+                    <artifactId>android-maven-plugin</artifactId>
+                    <version>${android.plugin.version}</version>
+                    <extensions>true</extensions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <!-- use the copy resources instead of resources, which adds it to
-                            the eclipse buildpath -->
-                        <phase>initialize</phase>
-                        <goals>
-                            <goal>copy-resources</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${project.basedir}/res</outputDirectory>
-                            <resources>
-                                <resource>
-                                    <directory>${project.basedir}/src/templates/res</directory>
-                                    <targetPath>${project.basedir}/res</targetPath>
-                                    <filtering>true</filtering>
-                                </resource>
-                            </resources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
             <plugin>
                 <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                 <artifactId>android-maven-plugin</artifactId>
-                <version>3.8.2</version>
-                <extensions>true</extensions>
                 <configuration>
-                    <manifest>
-                        <debuggable>true</debuggable>
-                    </manifest>
+                    <sdk>
+                        <platform>16</platform>
+                    </sdk>
                 </configuration>
-                <executions>
-                    <execution>
-                        <id>manifestUpdate</id>
-                        <phase>process-resources</phase>
-                        <goals>
-                            <goal>manifest-update</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>alignApk</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>zipalign</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
