--- a/chaturaji-web-services/pom.xml
+++ b/chaturaji-web-services/pom.xml
@@ -11,17 +11,29 @@
 
     <artifactId>chaturaji-web-services</artifactId>
 
+    <name>Chaturaji Web Services</name>
+
     <properties>
         <aspectj.version>1.7.1</aspectj.version>
         <java.version>1.7</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <spring.version>3.2.1.RELEASE</spring.version>
+        <spring.version>3.2.5.RELEASE</spring.version>
         <spring-security.version>3.1.3.RELEASE</spring-security.version>
         <slf4j.version>1.7.2</slf4j.version>
     </properties>
 
     <dependencies>
+        <!-- chaturaji -->
+        <dependency>
+            <groupId>org.chaturaji</groupId>
+            <artifactId>chaturaji-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.chaturaji</groupId>
+            <artifactId>chaturaji-ai</artifactId>
+        </dependency>
+
         <!-- Simple Login Facade for Java (SLF4J) -->
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -42,6 +54,14 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-jdk14</artifactId>
             <version>${slf4j.version}</version>
+        </dependency>
+
+        <!-- http -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.0.1</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- Spring MVC -->
