--- a/chaturaji-android-app/AndroidManifest.xml
+++ b/chaturaji-android-app/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <application android:allowBackup="true" android:debuggable="true" android:icon="@drawable/ic_launcher"
                  android:label="@string/app_name" android:theme="@style/AppTheme">
-        <activity android:name=".HelloAndroidActivity">
+        <activity android:name=".MainMenu">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
