--- a/chaturaji-android-app/AndroidManifest.xml
+++ b/chaturaji-android-app/AndroidManifest.xml
@@ -2,8 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1"
           android:versionName="1.0-SNAPSHOT" package="ac.ic.chaturaji.android">
 
-    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="16"/>
-
+    <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="16"/>
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
     <application android:allowBackup="true" android:debuggable="true" android:icon="@drawable/ic_launcher"
                  android:label="@string/app_name" android:theme="@style/AppTheme">
         <activity android:name=".MainMenu">
