--- a/chaturaji-core/pom.xml
+++ b/chaturaji-core/pom.xml
@@ -19,6 +19,13 @@
     </properties>
 
     <dependencies>
+        <!-- Jackson JSON Serializer -->
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.13</version>
+        </dependency>
+
         <!-- Apache Commons -->
         <dependency>
             <groupId>org.apache.commons</groupId>
