--- a/chaturaji-android-app/pom.xml
+++ b/chaturaji-android-app/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -16,6 +16,7 @@
 
     <properties>
         <platform.version>4.1.1</platform.version>
+        <slf4j.version>1.7.2</slf4j.version>
     </properties>
 
     <dependencies>
@@ -32,8 +33,8 @@
             <groupId>org.chaturaji</groupId>
             <artifactId>chaturaji-core</artifactId>
         </dependency>
-		
-		        <!-- Jackson JSON Serializer -->
+
+        <!-- Jackson JSON Serializer -->
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
