Cleaned up create game webservice to make it more restful by using http status codes

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,28 @@
                 <artifactId>chaturaji-ai</artifactId>
                 <version>${project.version}</version>
             </dependency>
+
+            <!-- Jackson JSON Serializer -->
+            <dependency>
+                <groupId>org.codehaus.jackson</groupId>
+                <artifactId>jackson-mapper-asl</artifactId>
+                <version>1.9.13</version>
+            </dependency>
+
+            <!-- Apache Commons -->
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.1</version>
+            </dependency>
+
+            <!-- testing -->
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.11</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
