--- a/chaturaji-android-app/AndroidManifest.xml
+++ b/chaturaji-android-app/AndroidManifest.xml
@@ -23,6 +23,14 @@
                 android:label="Game Rooms" >
         </activity>
         <activity
+                android:name=".SettingsActivity"
+                android:label="Game Settings" >
+        </activity>
+        <activity
+                android:name=".CreateGameActivity"
+                android:label="Create New Game" >
+        </activity>
+        <activity
                 android:name=".GameActivity"
                 android:screenOrientation="portrait"
                 android:configChanges="orientation|keyboard|keyboardHidden|screenSize"
