--- a/chaturaji-android-app/AndroidManifest.xml
+++ b/chaturaji-android-app/AndroidManifest.xml
@@ -32,6 +32,7 @@
         </activity>
         <activity
                 android:name=".GameActivity"
+                android:screenOrientation="portrait"
                 android:configChanges="orientation|keyboard|keyboardHidden|screenSize"
                 android:label="In-Game" >
         </activity>
