--- a/chaturaji-web-services/src/main/webapp/WEB-INF/web.xml
+++ b/chaturaji-web-services/src/main/webapp/WEB-INF/web.xml
@@ -30,6 +30,16 @@
         <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
     </listener>
 
+    <!-- spring security filter -->
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
     <!-- processes application requests -->
     <servlet>
         <servlet-name>dispatcherServlet</servlet-name>
