--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,18 @@
                 <version>3.1</version>
             </dependency>
 
+            <!-- Validation -->
+            <dependency>
+                <groupId>javax.validation</groupId>
+                <artifactId>validation-api</artifactId>
+                <version>1.0.0.GA</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-validator</artifactId>
+                <version>4.3.1.Final</version>
+            </dependency>
+
             <!-- testing -->
             <dependency>
                 <groupId>junit</groupId>
