--- a/chaturaji-android-app/AndroidManifest.xml
+++ b/chaturaji-android-app/AndroidManifest.xml
@@ -36,6 +36,10 @@
                 android:configChanges="orientation|keyboard|keyboardHidden|screenSize"
                 android:label="In-Game" >
         </activity>
+        <activity
+                android:name=".SignUpActivity"
+                android:label="Sign up" >
+        </activity>
     </application>
 
 </manifest>
