Can choose colour now before launching single player and can rotate screen!

--- a/chaturaji-android-app/AndroidManifest.xml
+++ b/chaturaji-android-app/AndroidManifest.xml
@@ -39,6 +39,11 @@
                 android:name=".SignUpActivity"
                 android:label="Sign up" >
         </activity>
+        <activity
+                android:name=".ChooseColour"
+                android:label="Choose Colour">
+        </activity>
+
     </application>
 
 </manifest>
