Login and registration working

--- a/chaturaji-android-app/pom.xml
+++ b/chaturaji-android-app/pom.xml
@@ -40,12 +40,21 @@
             <artifactId>jackson-mapper-asl</artifactId>
         </dependency>
 
+        <!-- HTTP Client -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.3-beta1</version>
+        </dependency>
+
         <!-- unit testing -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
     </dependencies>
+
+
 
     <build>
         <finalName>${project.artifactId}</finalName>
