--- a/chaturaji-web-services/pom.xml
+++ b/chaturaji-web-services/pom.xml
@@ -19,8 +19,8 @@
         <java.version>1.7</java.version>
         <!-- version properties -->
         <aspectj.version>1.7.1</aspectj.version>
-        <spring.version>3.2.5.RELEASE</spring.version>
-        <spring-security.version>3.1.3.RELEASE</spring-security.version>
+        <spring.version>4.0.1.RELEASE</spring.version>
+        <spring-security.version>3.2.0.RELEASE</spring-security.version>
         <slf4j.version>1.7.2</slf4j.version>
         <tomcat.version>7.0.47</tomcat.version>
     </properties>
@@ -67,23 +67,25 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>${spring.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>commons-logging</groupId>
-                    <artifactId>commons-logging</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-websocket</artifactId>
+        </dependency>
+
+        <!-- Netty (for web sockets) -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.0.15.Final</version>
         </dependency>
 
         <!-- Validation -->
