--- a/chaturaji-android-app/AndroidManifest.xml
+++ b/chaturaji-android-app/AndroidManifest.xml
@@ -32,7 +32,7 @@
         </activity>
         <activity
                 android:name=".GameActivity"
-                android:configChanges="orientation|keyboard|keyboardHidden|screenSize"
+                android:configChanges="mcc|mnc|locale|touchscreen|navigation|screenLayout|fontScale|uiMode|smallestScreenSize|orientation|keyboard|keyboardHidden|screenSize"
                 android:label="In-Game" >
         </activity>
         <activity
