--- a/chaturaji-web-services/src/main/webapp/WEB-INF/web.xml
+++ b/chaturaji-web-services/src/main/webapp/WEB-INF/web.xml
@@ -64,4 +64,12 @@
         <welcome-file/>
     </welcome-file-list>
 
+    <resource-ref>
+        <description>DB Connection</description>
+        <res-ref-name>jdbc/chaturaji-dao</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
+
+
 </web-app>
