--- a/chaturaji-core/pom.xml
+++ b/chaturaji-core/pom.xml
@@ -31,6 +31,13 @@
             <artifactId>commons-lang3</artifactId>
         </dependency>
 
+        <!-- Joda Time (proper date objects) -->
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.3</version>
+        </dependency>
+
         <!-- Spring MVC -->
         <dependency>
             <groupId>org.springframework</groupId>
