android depndency and other minor fixes

--- a/chaturaji-core/pom.xml
+++ b/chaturaji-core/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>joda-time</artifactId>
             <version>2.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.joda</groupId>
+            <artifactId>joda-convert</artifactId>
+            <version>1.6</version>
+        </dependency>
 
         <!-- Spring MVC -->
         <dependency>
