--- a/chaturaji-core/pom.xml
+++ b/chaturaji-core/pom.xml
@@ -67,10 +67,22 @@
             <artifactId>hibernate-validator</artifactId>
         </dependency>
 
+        <!-- Netty (for web sockets) -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.0.15.Final</version>
+        </dependency>
+
         <!-- testing -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>13.0.1</version>
         </dependency>
     </dependencies>
 
