--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <maven.compiler.target>1.7</maven.compiler.target>
         <spring.version>4.0.1.RELEASE</spring.version>
         <jackson-version>2.3.2</jackson-version>
-        <tomcat.version>8.0.3</tomcat.version>
+        <jetty.version>9.1.3.v20140225</jetty.version>
     </properties>
 
     <modules>
@@ -106,18 +106,26 @@
                 <version>4.3.1.Final</version>
             </dependency>
 
-            <!-- Tomcat Server (Integration Testing) -->
+            <!-- Jetty HTTP Server -->
             <dependency>
-                <groupId>org.apache.tomcat.embed</groupId>
-                <artifactId>tomcat-embed-core</artifactId>
-                <version>${tomcat.version}</version>
-                <scope>test</scope>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-http</artifactId>
+                <version>${jetty.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.apache.tomcat.embed</groupId>
-                <artifactId>tomcat-embed-logging-juli</artifactId>
-                <version>${tomcat.version}</version>
-                <scope>test</scope>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-server</artifactId>
+                <version>${jetty.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-webapp</artifactId>
+                <version>${jetty.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-servlet</artifactId>
+                <version>${jetty.version}</version>
             </dependency>
 
             <!-- testing -->
