improved logging and feedback about errors and issues

--- a/chaturaji-ai/pom.xml
+++ b/chaturaji-ai/pom.xml
@@ -21,6 +21,20 @@
             <artifactId>chaturaji-core</artifactId>
         </dependency>
 
+        <!-- Simple Login Facade for Java (SLF4J) -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jcl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+
         <!-- Spring -->
         <dependency>
             <groupId>org.springframework</groupId>
