--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <spring.version>4.0.1.RELEASE</spring.version>
         <jackson-version>2.3.2</jackson-version>
         <jetty.version>9.1.3.v20140225</jetty.version>
+        <slf4j.version>1.7.2</slf4j.version>
     </properties>
 
     <modules>
@@ -40,6 +41,25 @@
                 <groupId>org.chaturaji</groupId>
                 <artifactId>chaturaji-ai</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+
+            <!-- Simple Login Facade for Java (SLF4J) -->
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-jcl</artifactId>
+                <version>${slf4j.version}</version>
+                <scope>runtime</scope>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>1.0.13</version>
+                <scope>runtime</scope>
             </dependency>
 
             <!-- Jackson JSON Serializer -->
