multiple fixes and improvements, including port changes to allow use of imperial servers

--- a/chaturaji-ai/pom.xml
+++ b/chaturaji-ai/pom.xml
@@ -40,6 +40,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- goggle guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+
         <!-- Spring -->
         <dependency>
             <groupId>org.springframework</groupId>
