--- a/chaturaji-core/pom.xml
+++ b/chaturaji-core/pom.xml
@@ -78,6 +78,10 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
