--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
                 <version>3.1</version>
             </dependency>
 
+            <!-- google guava -->
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>15.0</version>
+            </dependency>
+
             <!-- Spring MVC -->
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -138,6 +145,12 @@
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>4.11</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.hamcrest</groupId>
+                <artifactId>hamcrest-library</artifactId>
+                <version>1.3</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
