AI diff added to client

--- a/chaturaji-android-app/AndroidManifest.xml
+++ b/chaturaji-android-app/AndroidManifest.xml
@@ -43,6 +43,10 @@
                 android:name=".ChooseColour"
                 android:label="Choose Colour">
         </activity>
+        <activity
+                android:name=".ChooseAI"
+                android:label="Choose Colour">
+        </activity>
 
     </application>
 
