fixed issues with email account

--- a/chaturaji-web-services/src/main/resources/email.properties
+++ b/chaturaji-web-services/src/main/resources/email.properties
@@ -3,6 +3,6 @@ email.contact.address=chaturaji.info@gmail.com
 email.host=smtp.gmail.com
 email.port=587
 email.protocol=smtp
-email.username=chaturaji.info@gmail.com
+email.username=bestchaturaji@gmail.com
 email.password=qazQAZ123
 email.starttls=true
