fixing issues with email setting causing google to lock account

--- a/chaturaji-web-services/src/main/resources/email.properties
+++ b/chaturaji-web-services/src/main/resources/email.properties
@@ -1,6 +1,7 @@
 # email settings
 email.contact.address=chaturaji.info@gmail.com
-email.host=smtp.gmail.com
+email.host=test.test.com
+#email.host=smtp.gmail.com
 email.port=587
 email.protocol=smtp
 email.username=bestchaturaji@gmail.com
